# mesa

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  METHODOLOGY.md  README.md  mesa-edu-items.json  mesa-fin-output.json  mesa-health-batch.json  mesa-infra-items.json  mesa-legal-batch.json  mesa-pers2-items.json  mesa-work-items.json  pyproject.toml  qwen3-27b-agentic-behavior.md  run_mike.py
adapters/: __init__.py  chroma_adapter.py  hermes_adapter.py  keyword_adapter.py  mem0_adapter.py  mike_adapter.py
dataset/: mesa_probes.json  mesa_v1.json  mesa_v2.json  mesa_v2_annotated.json  mesa_v2_dev.json  mmeb_v1.json  review_log_v2.json  schema.json  schema_v2.json  version_v2.json  version_v2_dev.json  version_v2_test_hidden.template.json
docs/: annotation_guidelines.md  baseline_reporting_template.md  baselines.md  benchmark_card.md  benchmark_card_template.md  benchmark_spec.md  benchmark_standardization_plan.md  dataset_governance.md  dataset_review_checklist.md  evaluation_protocol.md  github_issue_plan.md  leaderboard.md  release_process.md  result_reporting.md
examples/: simple_adapter.py
mesa/: __init__.py  adapter.py  runner.py  scorer.py  semantic_scorer.py
mmeb/: __init__.py  adapter.py  runner.py  scorer.py
public_results/: dict_v070_2026-05-26_05-09.json  dict_v2_gold.json  echo_v070_2026-05-26_05-09.json  echo_v2_gold.json  hermes_v070_2026-05-25_23-44.json  hermes_v2_gold_2026-05-25.json  mike_v070_2026-05-25_23-16.json  mike_v2_gold_2026-05-25.json  null_v070_2026-05-26_05-09.json  null_v2_gold.json
(+22 files in other folders)
