[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mmeb"
version = "0.1.0"
description = "Mike Memory Eval Benchmark — a reproducible framework for personal AI memory systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "rouge-score>=0.1.2",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "jsonschema>=4"]

[project.scripts]
mmeb = "mmeb.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mmeb*"]
